[project]
name = "langchain-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Suah Cho",email = "sacho0929@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain-openai (>=0.3.18,<0.4.0)"
]

[tool.poetry]
packages = [{include = "langchain_test", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
